# WorkTable

./: .gitignore  AUTHORS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  idea.md  old_README.md  other_db.md  x.md
.github/workflows/: mirror.yml  rust.yml
codegen/: Cargo.toml
codegen/src/: gen_row_type.rs  gen_table_type.rs  lib.rs  name_generator.rs  parse_columns.rs  parse_name.rs  parse_punct.rs  worktable.rs
codegen/src/heap_size/: mod.rs
codegen/src/mem_stat/: mod.rs
codegen/src/persist_index/: generator.rs  mod.rs  parser.rs  space.rs
codegen/src/persist_index/space/: events.rs  index.rs  mod.rs
codegen/src/persist_table/: mod.rs  parser.rs
codegen/src/persist_table/generator/: mod.rs  size_measurable.rs  space.rs  space_deserialize.rs  space_serialize.rs
codegen/src/persist_table/generator/space_file/: mod.rs  worktable_impls.rs
codegen/src/worktable/: gen_index_type.rs  gen_row_type.rs  gen_table_type.rs  mod.rs  parse_columns.rs  parse_name.rs  parse_punct.rs
codegen/src/worktable/generator/: index.rs  locks.rs  mod.rs  primary_key.rs  row.rs  table.rs  wrapper.rs
codegen/src/worktable/generator/index/: cdc.rs  info.rs  mod.rs  usual.rs
codegen/src/worktable/generator/queries/: delete.rs  in_place.rs  locks.rs  mod.rs  select.rs  type.rs  unsized_.rs  update.rs
codegen/src/worktable/generator/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/worktable/model/: column.rs  config.rs  index.rs  mod.rs  operation.rs  primary_key.rs  queries.rs
codegen/src/worktable/parser/: attribute.rs  columns.rs  config.rs  index.rs  mod.rs  name.rs  punct.rs
codegen/src/worktable/parser/queries/: delete.rs  in_place.rs  mod.rs  operation.rs  select.rs  update.rs
codegen/src/worktable_query/: mod.rs
codegen/src/worktable_query/model/: mod.rs  operation.rs  queries.rs
codegen/src/worktable_query/parser/: mod.rs  name.rs  operation.rs  punct.rs  queries.rs  update.rs
codegen/src/worktable_row/: mod.rs
codegen/tests/: worktable.rs  worktable_row.rs
docs/: queries.md
examples/: Cargo.toml  README.md
examples/src/: main.rs
performance_measurement/: Cargo.toml
performance_measurement/codegen/: Cargo.toml
performance_measurement/codegen/src/: lib.rs  performance_measurement.rs
performance_measurement/codegen/tests/: performance_measurement.rs
performance_measurement/src/: lib.rs  profiler.rs
src/: column.rs  field.rs  index.rs  lib.rs  old_row.rs  old_table.rs  primary_key.rs  row.rs  rworktable.rs  table.rs  ty.rs  value.rs  worktable.rs
src/database/: manager.rs  mod.rs
src/in_memory/: data.rs  mod.rs  pages.rs  row.rs
src/in_memory/data/: data.rs  link.rs  mod.rs
src/in_memory/page/: data.rs  link.rs  mod.rs  type.rs
src/in_memory/space/: mod.rs
src/index/: available_index.rs  mod.rs  multipair.rs  table_index.rs  table_index_cdc.rs  table_secondary_index.rs  table_secondary_index_events.rs  unsized_node.rs
src/index/table_index/: bplus_tree.rs  cdc.rs  hash_map.rs  index_set.rs  lockfree_map.rs  mod.rs  tree_index.rs
src/index/table_secondary_index/: cdc.rs  index_events.rs  info.rs  mod.rs
src/lock/: map.rs  mod.rs  row_lock.rs  set.rs
src/mem_stat/: mod.rs  primitives.rs
src/persistence/: engine.rs  manager.rs  mod.rs  operation.rs  task.rs
src/persistence/operation/: batch.rs  mod.rs  operation.rs  util.rs
src/persistence/space/: data.rs  mod.rs
src/persistence/space/index/: mod.rs  table_of_contents.rs  unsized_.rs  util.rs
src/table/: mod.rs  select.rs  system_info.rs
src/table/select/: mod.rs  query.rs  result.rs
src/util/: mod.rs  optimized_vec.rs  ordered_float.rs  sized.rs
tests/: just.rs  mod.rs
tests/data/: persist_index_table_of_contents.wt.idx  test_persist.wt  test_without_secondary_indexes.wt
tests/data/expected/: persist_index_table_of_contents.wt.idx  test.wt  test_without_secondary_indexes.wt
tests/data/expected/space_index/: process_create_node.wt.idx  process_create_node_after_remove.wt.idx  process_insert_at.wt.idx  process_insert_at_removed_place.wt.idx  process_insert_at_with_node_id_update.wt.idx  process_remove_at_node_id.wt.idx  process_remove_node.wt.idx  process_split_node.wt.idx
tests/data/expected/space_index_unsized/: process_create_node.wt.idx  process_create_node_after_remove.wt.idx  process_remove_at.wt.idx  (+7 more)
tests/data/space_index/: process_create_node.wt.idx  process_create_node_after_remove.wt.idx  process_create_second_node.wt.idx  process_insert_at_big_amount.wt.idx  process_insert_at_removed_place.wt.idx  process_insert_at_with_node_id_update.wt.idx  process_remove_at.wt.idx  process_remove_at_node_id.wt.idx  process_remove_node.wt.idx  process_split_node.wt.idx
tests/data/space_index_unsized/: process_create_node.wt.idx  process_create_node_after_remove.wt.idx  process_create_second_node.wt.idx  process_insert_at.wt.idx  process_insert_at_big_amount.wt.idx  process_insert_at_removed_place.wt.idx  process_insert_at_with_node_id_update.wt.idx  process_remove_at.wt.idx  process_remove_at_node_id.wt.idx  process_remove_node.wt.idx
tests/data/test_persist/: .wt.data  .wt.info  another_idx.wt.idx  primary.wt.idx
tests/data/test_without_secondary_indexes/: .wt.data  .wt.info  primary.wt.idx
tests/non-existent/test_persist/: .wt.data  another_idx.wt.idx
tests/persistence/: mod.rs  read.rs  write.rs
tests/persistence/concurrent/: mod.rs
tests/persistence/index_page/: mod.rs  read.rs  unsized_read.rs
tests/persistence/space_index/: indexset_compatibility.rs  mod.rs  unsized_write.rs  write.rs
tests/persistence/sync/: many_strings.rs  mod.rs  string_primary_index.rs  string_re_read.rs  string_secondary_index.rs  uuid_.rs
tests/persistence/toc/: mod.rs  read.rs  unsized_read.rs  write.rs
tests/worktable/: array.rs  base.rs  bench.rs  config.rs  count.rs  custom_pk.rs  delete.rs  float.rs  in_place.rs  index.rs  index_type.rs  mod.rs  option.rs  tuple_primary_key.rs  unsized_.rs  uuid.rs  with_enum.rs
tests/worktable/index/: insert.rs  mod.rs  update_by_pk.rs  update_full.rs  update_query.rs
util/: find_println.sh
(+17 files in other folders)
