[workspace]
members = ["codegen", "examples", "performance_measurement", "performance_measurement/codegen"]

[package]
name = "worktable"
version = "0.5.4"
edition = "2021"
authors = ["Handy-caT"]
license = "MIT"
repository = "https://github.com/pathscale/WorkTable"
description = "WorkTable is in-memory storage"

[features]
perf_measurements = ["dep:performance_measurement", "dep:performance_measurement_codegen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
derive_more = { version = "1.0.0", features = ["from", "error", "display", "into"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
rkyv = { version = "0.8.9", features = ["uuid-1"] }
lockfree = { version = "0.5.1" }
worktable_codegen = { path = "codegen", version = "0.5.3" }
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
data_bucket = "0.2.2"
# data_bucket = { git = "https://github.com/pathscale/DataBucket", branch = "main" }
# data_bucket = { path = "../DataBucket", version = "0.2.2" }
performance_measurement_codegen = { path = "performance_measurement/codegen", version = "0.1.0", optional = true }
performance_measurement = { path = "performance_measurement", version = "0.1.0", optional = true }
indexset = { version = "0.12.0", features = ["concurrent", "cdc", "multimap"] }
# indexset = { path = "../indexset", version = "0.11.3", features = ["concurrent", "cdc", "multimap"] }
convert_case = "0.6.0"
ordered-float = "5.0.0"
serde = { version = "1.0.215", features = ["derive"] }
prettytable-rs = "^0.10"
