[package]
name = "worktable_codegen"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "WorkTable codegeneration crate"

[lib]
name = "worktable_codegen"
path = "src/lib.rs"
proc-macro = true

[dev-dependencies]
scc = "2.2.5"
lockfree = "0.5.1"

[dependencies]
rkyv = {version = "0.7.45"}
syn = { version = "2.0.74", features = ["full"]}
quote = "1.0.36"
proc-macro2 = "1.0.86"
regex = "1.10.6"
convert_case = "0.6.0"