[package]
name = "wt-examples"
version = "0.1.0"
edition = "2021"

[dependencies]

worktable = { path = "..", version = "0.5.0", features = ["perf_measurements"] }
rkyv = { version = "0.8.9", features = ["uuid-1"] }
lockfree = "0.5.1"
derive_more = { version = "1.0.0", features = ["full"] }
eyre = "0.6.12"
futures = "0.3.30"
async-std = "1.10"
either = "1.15.0"
ordered-float = "5.0.0"
indexset = { version = "0.11.3", features = ["concurrent", "cdc", "multimap"] }
tokio = { version = "1", features = ["full"] }

