[package]
name = "wt-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
worktable = { path = "../", version = "0.8.0" }
tokio = { version = "1.39.2", features = ["full"] }
rkyv = { version = "0.8.9", features = ["uuid-1"] }
eyre = "0.6.12"
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
atomic_float = "1.1.0"
rand = "0.9.1"
