[package]
name = "performance_measurement_codegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Performance measurements codegeneration crate"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.74", features = ["full"]}
quote = "1.0.36"
proc-macro2 = "1.0.86"
regex = "1.10.6"
performance_measurement = {path = "..", version = "0.1.0"}